log
Sat, Apr 19, 2025  1:17:03 PM: 
 hashmap.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
eeef3b7
Sat, Apr 19, 2025  1:31:05 PM: 
 hashmap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:45:5: error: expected ',' or ';' before 'do'
     do {
     ^~
e3dd6a7
